Scrollbar fix
Used overflow-y: hidden on body, might not be the best idea

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,8 +1,8 @@
 body {
     margin: 0;
     padding: 0;
-    /*max-height: 95vh;*/
     cursor: default;
+    overflow-y: hidden;
 }
 
 #canvas {
@@ -11,7 +11,8 @@ body {
     position: absolute;
     top: 0;
     width: 100vw;
-    height: 99vh;
+    height: 100vh;
+
 }
 
 #inputField {
